--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -474,7 +474,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Look across all previously generated figures and tables and write at least three observations or inferences that can be made from the data. Include these observations at the top of notebook."
+    "Look across all previously generated figures and tables and write at least three observations or inferences that can be made from the data. Include these observations at the top of notebook.\n",
+    "\n",
+    "1. Equal number of male and female tests\n",
+    "2. Capomulin and Raminane had a higher number of data points than the other two drugs\n",
+    "3. Capomulin and Ramicane had a lower final tumor volume than the other two drugs, also showing a tighter distribution.\n",
+    "4. Capomulin showed a steady volume decrease over time\n",
+    "5. Mouse weight and tumor volume show a high correlation.\n",
+    "\n"
    ]
   }
  ],
